# netology_tt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
docker/: Dockerfile  docker-compose.yml
src/: main.rs
src/api/: mod.rs
src/services/: mod.rs  openweathermap.rs  weatherapicom.rs
