[package]
name = "netology_tt"
version = "0.1.0"
authors = ["DanilaRostovtsev <rostovtsev.danila@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"

log = "*"
env_logger = "*"

reqwest = {version = "*", features = ["blocking", "multipart"]}
chrono = "*"
