[package]
name = "netology_tt"
version = "0.1.0"
authors = ["DanilaRostovtsev <rostovtsev.danila@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1"
tokio = { version = "1.7.1", features = ["macros"] }

serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"

log = "0.4.14"
env_logger = "0.8.4"

reqwest = {version = "0.11.4", features = ["blocking", "json"]}
chrono = { version = "*", features = ["serde"] }
async-trait = "0.1.50"

